--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,21 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f5f5f5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.MuiGrid-root {
+  margin: 0 !important;
+  width: 100% !important;
+}
+
+.MuiPaper-root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.plot-area {
+  width: 100%;
+  height: 100%;
 }
